--- a/about.html
+++ b/about.html
@@ -2,13 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/srioboo.github.io/favicon.png" />
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/start-a8bddc31.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/chunks/index-03969575.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/layout.svelte-818fd2cb.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/pages/about.svelte-78c34a76.js">
+	<link rel="modulepreload" href="/_app/immutable/start-3ed2c509.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/index-03969575.js">
+	<link rel="modulepreload" href="/_app/immutable/layout.svelte-818fd2cb.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/about.svelte-78c34a76.js">
 	</head>
 	<body>
 		<div>
@@ -18,13 +18,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="2eq20f">
-		import { set_public_env, start } from "/srioboo.github.io/_app/immutable/start-a8bddc31.js";
+		import { set_public_env, start } from "/_app/immutable/start-3ed2c509.js";
 
 		set_public_env({});
 
 		start({
 			target: document.querySelector('[data-sveltekit-hydrate="2eq20f"]').parentNode,
-			paths: {"base":"/srioboo.github.io","assets":"/srioboo.github.io"},
+			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
 			spa: false,
