feat: Auto-generated commit

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 		<link rel="icon" href="/srioboo.github.io/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/start-a7d64736.js">
+	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/start-f788a011.js">
 	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/chunks/index-03969575.js">
+	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/chunks/paths-b9644fda.js">
 	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/layout.svelte-818fd2cb.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/pages/index.svelte-886d09aa.js">
+	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/pages/index.svelte-ad5be0a1.js">
 	</head>
 	<body>
 		<div>
@@ -17,14 +18,17 @@
 <h1>Welcome to Salva Portfolio</h1>
 <p>This project is build with SvelteKit. Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
 
+<nav><a href="/srioboo.github.io/">Home</a>
+    <a href="/srioboo.github.io/about">About</a></nav>
 
-		<script type="module" data-sveltekit-hydrate="9ahj2e">
-		import { set_public_env, start } from "/srioboo.github.io/_app/immutable/start-a7d64736.js";
+
+		<script type="module" data-sveltekit-hydrate="5cb13g">
+		import { set_public_env, start } from "/srioboo.github.io/_app/immutable/start-f788a011.js";
 
 		set_public_env({});
 
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="9ahj2e"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="5cb13g"]').parentNode,
 			paths: {"base":"/srioboo.github.io","assets":"/srioboo.github.io"},
 			session: {},
 			route: true,
