feat: incluida maquetación base

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body>
-		<div>%sveltekit.body%</div>
+	<body class="is-preload">
+
+	<div>%sveltekit.body%</div>
 	</body>
 </html>
