feat: Auto-generated commit

--- a/about.html
+++ b/about.html
@@ -2,30 +2,49 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/srioboo.github.io/favicon.png" />
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/start-821b6d46.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/chunks/index-03969575.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/chunks/paths-b9644fda.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/layout.svelte-818fd2cb.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/pages/about.svelte-78c34a76.js">
+	<link href="/_app/immutable/assets/__layout-1a2accf1.css" rel="stylesheet">
+	<link rel="modulepreload" href="/_app/immutable/start-1333db6d.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/index-60a08cf8.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-1c4c0202.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/about.svelte-276df77d.js">
 	</head>
-	<body>
-		<div>
+	<body class="is-preload">
+
+	<div>
 
 
 
+<div id="header"><div class="top">
+		<div id="logo"><span class="image avatar48"><img src="/images/avatar.jpg" alt=""></span>
+			<h1 id="title">Salvador Rioboo</h1>
+			<p>Full Stack Developer</p></div>
+
+		
+		<nav id="nav"></nav></div>
+
+	<div class="bottom">
+		<ul class="icons">
+			
+			<li><a href="https://github.com/srioboo" class="icon brands fa-github"><span class="label">Github</span></a></li>
+			
+			</ul></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="2eq20f">
-		import { set_public_env, start } from "/srioboo.github.io/_app/immutable/start-821b6d46.js";
+<div id="footer">
+    <ul class="copyright"><li>© Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li></ul></div>
+
+
+		<script type="module" data-sveltekit-hydrate="73kop1">
+		import { set_public_env, start } from "/_app/immutable/start-1333db6d.js";
 
 		set_public_env({});
 
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="2eq20f"]').parentNode,
-			paths: {"base":"/srioboo.github.io","assets":"/srioboo.github.io"},
+			target: document.querySelector('[data-sveltekit-hydrate="73kop1"]').parentNode,
+			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
 			spa: false,
