--- a/index.html
+++ b/index.html
@@ -2,34 +2,56 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/srioboo.github.io/favicon.png" />
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/start-821b6d46.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/chunks/index-03969575.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/chunks/paths-b9644fda.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/layout.svelte-818fd2cb.js">
-	<link rel="modulepreload" href="/srioboo.github.io/_app/immutable/pages/index.svelte-ad5be0a1.js">
+	<link href="/_app/immutable/assets/__layout-1a2accf1.css" rel="stylesheet">
+	<link rel="modulepreload" href="/_app/immutable/start-1333db6d.js">
+	<link rel="modulepreload" href="/_app/immutable/chunks/index-60a08cf8.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/__layout.svelte-1c4c0202.js">
+	<link rel="modulepreload" href="/_app/immutable/pages/index.svelte-fc4de4a8.js">
 	</head>
-	<body>
-		<div>
+	<body class="is-preload">
+
+	<div>
 
 
-<h1>Welcome to Salva Portfolio</h1>
-<p>This project is build with SvelteKit. Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
 
-<nav><a href="/srioboo.github.io/">Home</a>
-    <a href="/srioboo.github.io/about">About</a></nav>
+<div id="header"><div class="top">
+		<div id="logo"><span class="image avatar48"><img src="/images/avatar.jpg" alt=""></span>
+			<h1 id="title">Salvador Rioboo</h1>
+			<p>Full Stack Developer</p></div>
+
+		
+		<nav id="nav"></nav></div>
+
+	<div class="bottom">
+		<ul class="icons">
+			
+			<li><a href="https://github.com/srioboo" class="icon brands fa-github"><span class="label">Github</span></a></li>
+			
+			</ul></div></div>
+
+<div id="main">
+<section id="top" class="one dark cover"><div class="container"><header>
+			<h2 class="alt">Hi! This site is a portfolio under construction.</h2></header>
+
+		</div></section>
+	</div>
 
 
-		<script type="module" data-sveltekit-hydrate="5cb13g">
-		import { set_public_env, start } from "/srioboo.github.io/_app/immutable/start-821b6d46.js";
+<div id="footer">
+    <ul class="copyright"><li>© Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li></ul></div>
+
+
+		<script type="module" data-sveltekit-hydrate="1uik6vj">
+		import { set_public_env, start } from "/_app/immutable/start-1333db6d.js";
 
 		set_public_env({});
 
 		start({
-			target: document.querySelector('[data-sveltekit-hydrate="5cb13g"]').parentNode,
-			paths: {"base":"/srioboo.github.io","assets":"/srioboo.github.io"},
+			target: document.querySelector('[data-sveltekit-hydrate="1uik6vj"]').parentNode,
+			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
 			spa: false,
